alignment: fixed bug in justified paragraphs

--- a/css/kitanda.css
+++ b/css/kitanda.css
@@ -264,6 +264,6 @@ img {
   width: 190px;
 }
 
-.justifed {
-  align: justify;
+.paragraph_justified {
+  text-align: justify;
 }
